--- a/cxutils.html
+++ b/cxutils.html
@@ -1320,8 +1320,8 @@ function main() {
     title="cxBinomialCoeff(n, k: int): int"><wbr />cx<wbr />Binomial<wbr />Coeff<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#clearScreen,"
     title="clearScreen(): int"><wbr />clear<wbr />Screen<span class="attachedType" style="visibility:hidden"></span></a></li>
-  <li><a class="reference" href="#createSeqAll,bool"
-    title="createSeqAll(showOrd: bool = false): seq[string]"><wbr />create<wbr />Seq<wbr />All<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#createSeqAll,int,int"
+    title="createSeqAll(min: int = 0; max: int = 40878): seq[string]"><wbr />create<wbr />Seq<wbr />All<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#createSeqGeoshapes,"
     title="createSeqGeoshapes(): seq[string]"><wbr />create<wbr />Seq<wbr />Geoshapes<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#createSeqHiragana,"
@@ -1736,7 +1736,7 @@ getNextMonday<pre class="listing"><span class="Identifier">echo</span>  <span cl
 
 
 </dd>
-<dt id="createSeqAll"><a name="createSeqAll,bool"></a><pre><span class="Keyword">proc</span> <span class="Identifier">createSeqAll</span><span class="Other">(</span><span class="Identifier">showOrd</span><span class="Other">:</span> <span class="Identifier">bool</span> <span class="Other">=</span> <span class="Identifier">false</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">string</span><span class="Other">]</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
+<dt id="createSeqAll"><a name="createSeqAll,int,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">createSeqAll</span><span class="Other">(</span><span class="Identifier">min</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">0</span><span class="Other">;</span> <span class="Identifier">max</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">40878</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">string</span><span class="Other">]</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
 <dd>
 
 
@@ -1887,7 +1887,7 @@ full cjk unicode range returned in a seq
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2018-03-06 21:49:41 UTC</small>
+        <small>Made with Nim. Generated: 2018-03-08 10:05:23 UTC</small>
       </div>
     </div>
   </div>
