--- a/cxglobal.html
+++ b/cxglobal.html
@@ -1278,6 +1278,8 @@ function main() {
     title="getTerminalHeight(): int"><wbr />get<wbr />Terminal<wbr />Height<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#cxpad,string,int"
     title="cxpad(s: string; padlen: int): string"><wbr />cxpad<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#cxlpad,string,int"
+    title="cxlpad(s: string; padlen: int): string"><wbr />cxlpad<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#waitOn,int"
     title="waitOn(alen: int = 1)"><wbr />wait<wbr />On<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#rndSample,seq[T]"
@@ -1539,6 +1541,13 @@ Description : provides many basic utility functions required by other modules</p
 <dd>
 <p>cxpad</p>
 <p>pads a string on the right side with spaces to specified width </p>
+
+
+</dd>
+<dt id="cxlpad"><a name="cxlpad,string,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">cxlpad</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">padlen</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
+<dd>
+<p>cxlpad</p>
+<p>pads a string on the left side with spaces to specified width </p>
 
 
 </dd>
@@ -2216,7 +2225,7 @@ returns a colorpalette which can be used to iterate over</pre>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2018-03-08 10:31:32 UTC</small>
+        <small>Made with Nim. Generated: 2018-03-15 23:08:55 UTC</small>
       </div>
     </div>
   </div>
